# bevy-recipes

./: Cargo.toml  README.md
recipes/: README.md
recipes/texts/: appearing_texts.rs
recipes/window_manipulation/: README.md  init_window.rs
