[package]
name = "bevy-recipe-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"

[[bin]]
name = "hello_world"
path = "recipes/hello_world.rs"

[[bin]]
name = "init_window"
path = "recipes/window_manipulation/init_window.rs"

[[bin]]
name = "appearing_texts"
path = "recipes/texts/appearing_texts.rs"
